# benchmark_tokio_uring

./: .gitignore  Cargo.toml  README.md  presentation.md  results.md  test_io_uring.c
benches/: benchmark.rs
infra/: app_error.rs  kafka.rs
io_uring_feedback/: Cargo.toml
io_uring_feedback/src/: main.rs  main_hyper_iouring_remote_kafka_future_producer.rs  main_hyper_local_kafka_base_producer.rs  main_hyper_local_kafka_future_producer.rs  main_hyper_remote_kafka_base_producer.rs  main_hyper_tokio_remote_kafka_future_producer.rs  main_tcp_local_kafka_base_producer.rs  main_tcp_local_kafka_future_producer.rs  main_tcp_remote_kafka_base_producer.rs  main_tcp_remote_kafka_future_producer.rs  main_tcp_tokio_remote_kafka_base_producer.rs
io_uring_server/: Cargo.toml
io_uring_server/src/: main.rs
tokio_server/: Cargo.toml
tokio_server/src/: main.rs
