[package]
name = "io_uring_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-uring = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
rdkafka = "0.29"
serde_json = "1.0.133"
testcontainers = "0.14"
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }


